# stimbposd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: surface_code_threshold.py
src/stimbposd/: __init__.py  bp_osd.py  config.py  dem_to_matrices.py  sinter_bp_osd.py
tests/: bp_osd_test.py  dem_to_mat_test.py
tests/data/: bivariate_bicycle_nkd_72_12_6_p_0.001_round_6.b8  bivariate_bicycle_nkd_72_12_6_p_0.001_round_6.dem  quasi_cyclic_nkd_72_12_6_p_0.001_round_6.stim
