[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stimbposd"
version = "0.0.1"
authors = [
  { name="Oscar Higgott"},
]
description = "Decode stim circuits with belief propagation and ordered statistics decoding (BP+OSD)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "stim",
    "sinter",
    "ldpc ~= 0.1",
    "numpy"
]
