[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/stimbposd/__init__.py"

[project]
name = "stimbposd"
dynamic = ["version"]
authors = [
  {name="Oscar Higgott"},
]
description = "Decode stim circuits with belief propagation and ordered statistics decoding (BP+OSD)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "stim",
    "sinter",
    "ldpc ~= 0.1",
    "numpy"
]
