[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/stimbposd/__init__.py"

[project]
name = "stimbposd"
dynamic = ["version"]
authors = [
  {name="Oscar Higgott"},
]
description = "Decode stim circuits with belief propagation and ordered statistics decoding (BP+OSD)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "stim",
    "sinter>=1.12.0,<1.14.0",
    "ldpc ~= 0.1",
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/oscarhiggott/stimbposd"
Issues = "https://github.com/oscarhiggott/stimbposd/issues"
